Add `BY-NC-SA 4.0` license. More cfgs to the book. Adopt Knit-Merge rendering method.
Could refer to https://github.com/rstudio/bookdown/tree/main/inst/examples more in the future.

--- a/body.Rmd
+++ b/body.Rmd
@@ -2,13 +2,13 @@
 
 ## 司马防 {#simafang}
 
-### 三国志 - 魏书 - 武帝纪
+### 三国志·魏书一·武帝纪
 
 《曹瞒传》曰：为尚书右丞司马建公`r n("司马防")`所举。及公为王，召建公到邺，与欢饮，谓建公曰："孤今日可复作尉否？"建公曰："昔举大王时，适可作尉耳。"王大笑。建公名防，司马宣王之父。臣松之案司马彪《序传》，建公不为右丞，疑此`r n("这件事")`不然，而王隐《晋书》云 `r n("自《晋书·赵王司马伦传》房玄龄")`赵王篡位，欲尊祖 `r n("司马防")`为帝，博士马平议 `r n("马平|马平议？")`称京兆府君昔举魏武帝为北部尉，贼不犯界，如此则为有征 `r n("证明")`。
 
 ## 司马懿
 
-### 晋书 - 宣帝
+### 晋书·宣帝
 
 汉建安 `r n("建安，是东汉末年汉献帝的第五个年号，使用时间从公元196年1月至公元220年3月")` 六年，郡举上计^[
 I. 上計制是中國古代的一種行政制度。是由下一級政府就自己轄區內的年度政績製作文書，呈交給上一級政府。上一級政府通過對上計文書的審查來對地方政府的政績進行考核，同時監督地方的行政。這種制度歷史悠久，源於戰國，在秦漢時發展得較為完備。
@@ -60,7 +60,7 @@ knitr::include_graphics("images/city_henan_nanyang.png")
 
 ## 曹爽
 
-### 三国志 - 魏书九 - 曹爽传
+### 三国志·魏书九·曹爽传
 
 爽字昭伯，少以 `r n("因为")` 宗室谨重 `r n("谨慎稳重[?]")` ，明帝 `r n("魏明帝曹叡（206年（存疑）—239年1月22日），字元仲，沛国谯县（今安徽省亳州市）人。曹魏第二位皇帝。魏文帝曹丕长子，母为文昭甄皇后。")` 在东宫，甚亲爱之。及即位，为散骑侍郎 `r n("入则规谏过失，备皇帝顾问，出则骑马散从")` ^[三国魏吴皆置，属散骑省，员额四人，五品。掌侍从左右，顾问应对、规劝得失；与散骑常侍等共平尚书奏事。西晋置，东晋罢。南朝复置，属集书省，掌文学侍从，收纳章奏，劝谏纠劾。北朝也置，且兼修国史。隋初属门下省，掌值班陪从；炀帝废。唐初复置，为加官，后改为文散官。参看“散骑省”、“门下省”、“散骑常侍”条。] ，累迁城门校尉 `r n("职掌京师城门守卫")` ^[城门校尉，它于汉武帝时初置，在汉代是一种不可或缺的军事力量，职掌京师城门守卫，东汉光武帝沿置之。城门校尉、执金吾与北军中候之间相互牵制，互不统属，共同组成了东汉中央宿卫系统中的城卫军。隋城门局属于门下省，设校尉二人，隋炀帝改校尉为城门郎。] ，加散骑常侍^[三国魏文帝黄初 (220—226) 初年置散骑，合于中常侍，谓之散骑常侍。西晋沿置，员四人，位比侍中，三品，秩比二千石，为门下重职，散骑省长官。职掌侍从皇帝左右，谏诤得失，顾问应对，与侍中等共平尚书奏事，有异议得驳奏。亦常用作宰相、诸公等加官，得入宫禁议政。至东晋，夺中书出令之权，参掌机密，选望甚重，职任比于侍中。]
 ，转武卫将军 `r n("掌宿卫禁军，权任很重")` ，宠待有殊。帝寝疾，乃引爽入卧内，拜大将军，假节钺，都督中外诸军事，录尚书事^[初为职衔名，始于东汉。当时政令、政务总于尚书台，太傅、太尉、大将军等加此名义始得总知国事，综理政务，成为真宰相。魏晋南北朝多以公卿权重者居之，总领尚书省政务，凡重号将军、刺史，皆得命曹授用，位在三公上。或以二人以上并录，参录，又有录尚书六条、关尚书七条事等名义。南朝宋孝武帝孝建(454—456)中，不欲威权外假，遂省。其后置省无常。南齐始单拜，成为正式官号，为尚书省长官。梁、陈以其威权过重，常缺不授。北魏、北齐亦定为官号，为尚书省长官，尚书令、仆射为其副贰，职权甚重，隋朝废。辽初曾拟授重臣]
@@ -76,11 +76,13 @@ knitr::include_graphics("https://p8.itc.cn/images01/20210516/052adda5c7494e15a24
 ，奉事三朝，入备冢宰 `r fn("相传为殷、周辅政大臣、百官之长。《尚书·伊训》：“百官总己以听冢宰。”《礼记·檀弓下》：“古者天子崩，王世子听于冢宰三年。”春秋战国泛指执掌国政的大臣。后世亦用以称宰相。唐代中后期，皇帝初崩，新君始立，从诸宰相中选一人摄冢宰，相当于首相之位。②《周礼》天官之长。亦作大(太)宰。居六卿之首，主管宫廷供御事务，参掌大政，总领百官及财赋之政。西魏末、北周建六官府，置为天官府长官。明清亦作为吏部尚书的别称。参见“大冢宰”、“天官府”。")` 
 ，出为上将。先帝以臣肺腑遗绪 `r n("前人留下来的功业")` ，奖（饰）〔饬〕拔擢，典兵禁省，进无忠恪 `r n("忠诚恭谨")` 积累之行，退无羔羊自公 `r fn("诗经《国风·召南》羔羊之皮，素丝五紽。退食自公，委蛇委蛇。羔羊之革，素丝五緎。委蛇委蛇，自公退食。羔羊之缝，素丝五总。委蛇委蛇，退食自公。薛汉《韩诗薛君章句》云：“诗人贤仕为大夫者，言其德能称，有洁白之性，屈柔之行，进退有度数也。”")` 
 之节。先帝圣体不豫，臣虽奔走，侍疾尝药，曾 `r n("曾经")` 无精诚翼日 `r n("明日，次日。翼，通“翌 ”")` 之应，猥 `r n("谦词,等于说“辱”,指降低身分,用于他人对自己的行动")` 与太尉懿俱受遗诏，且惭且惧，靡所厎告 `r n("诉告。把自己的心意表达与人")` 。臣闻虞舜序贤，以稷、契为先，成汤褒功，以伊、吕为首，审选博举，优劣得所，斯诚辅世长民之大经，录勋报功之令典，自古以来，未之或阙。今臣虚暗，位冠朝首，顾惟越次，中心愧惕，敢竭愚情，陈写至实。夫天下之达道者三，谓德、爵、齿也。懿本以高明中正，处上司之位，名足镇众，义足率下，一也。包怀大略，允文允武，仍立征伐之勋，遐迩 `r n("远近")` 归功，二也。万里旋旆 `r n("xuán pèi。回师")` ，亲受遗诏，翼亮 `r n("辅佐并使其发扬光大")` 皇家，内外所向，三也。加之耆艾，纪纲邦国，体练朝政。论德则过于吉甫 `r fn("周宣王 贤臣 尹吉甫。泛指贤能宰辅")` 
-、樊仲 `r n("仲山甫。或作仲山父。西周人。周宣王之大臣。名失传。封于樊，亦称樊仲、樊仲山父、樊穆仲。宣王战败，丧失军队甚夥，乃欲登计民数于太原。仲山甫劝谏。后辅佐宣王，尹吉甫尝作《烝民》之诗以称扬其德")` ，课功 `r n("考核功绩")` 则逾于方叔 `r n("西周人。周宣王时卿士。曾率兵车三千辆南征荆楚，北伐玁狁，有功于周")` 、召虎 `r n("或作召伯虎。西周人，名虎。召公奭后裔。封于召。周厉王虐，虎谏，王不听，以卫巫监谤。虎再谏，又不听。终为国人所逐，流于彘。太子靖避居于召虎家，虎以己子替死。厉王死，拥立靖为宣王。时淮夷不服，宣王命虎率师讨平之。宣王加封申伯地，虎为之经营。卒谥穆，称召穆公。")` `r cm("以子替死，黑心也")` 。凡此数者，懿实兼之。臣抱空名而处其右，天下之人将谓臣以宗室见私，知进而不知退。陛下岐嶷，克明克类，如有以察臣之言，臣以为宜以懿为太傅、大司马，上昭陛下进贤之明，中显懿身文武之实，下使愚臣免于谤诮。” `r cm("至此乃曹羲进表。故贬己抬懿，行捧杀之实")` 于是帝使中书监刘放、令孙资为诏 `r cm("八岁小儿，怎知如何下诏。乃中书监代拟也")` 曰：“昔吴汉 `r fn("东汉南阳宛人，字子颜。初为亭长，王莽末亡命至渔阳，以贩马为业。后归刘秀，从征王郎，为偏将军。后与诸将拥刘秀为帝，任大司马，封舞阳侯。镇压铜马、重连、高湖、青犊、五校等军，击灭秦丰、刘永、董宪等，平定东方。又随刘秀西击隗嚣。建武十一年，率军伐蜀，次年灭蜀，尽杀公孙述宗族。卒谥忠。")` 
+、樊仲 `r n("仲山甫。或作仲山父。西周人。周宣王之大臣。名失传。封于樊，亦称樊仲、樊仲山父、樊穆仲。宣王战败，丧失军队甚夥，乃欲登计民数于太原。仲山甫劝谏。后辅佐宣王，尹吉甫尝作《烝民》之诗以称扬其德")` ，课功 `r n("考核功绩")` 则逾于方叔 `r n("西周人。周宣王时卿士。曾率兵车三千辆南征荆楚，北伐玁狁，有功于周")` 、召虎 `r n("或作召伯虎。西周人，名虎。召公奭后裔。封于召。周厉王虐，虎谏，王不听，以卫巫监谤。虎再谏，又不听。终为国人所逐，流于彘。太子靖避居于召虎家，虎以己子替死。厉王死，拥立靖为宣王。时淮夷不服，宣王命虎率师讨平之。宣王加封申伯地，虎为之经营。卒谥穆，称召穆公。")` `r fa("以子替死，黑心也")` 。凡此数者，懿实兼之。臣抱空名而处其右，天下之人将谓臣以宗室见私，知进而不知退。陛下岐嶷，克明克类，如有以察臣之言，臣以为宜以懿为太傅、大司马，上昭陛下进贤之明，中显懿身文武之实，下使愚臣免于谤诮。” `r fa("至此乃曹羲进表。故贬己抬懿，行捧杀之实")` 于是帝使中书监刘放、令孙资为诏 `r fa("八岁小儿，怎知如何下诏。乃中书监代拟也")` 曰：“昔吴汉 `r fn("东汉南阳宛人，字子颜。初为亭长，王莽末亡命至渔阳，以贩马为业。后归刘秀，从征王郎，为偏将军。后与诸将拥刘秀为帝，任大司马，封舞阳侯。镇压铜马、重连、高湖、青犊、五校等军，击灭秦丰、刘永、董宪等，平定东方。又随刘秀西击隗嚣。建武十一年，率军伐蜀，次年灭蜀，尽杀公孙述宗族。卒谥忠。")` 
 佐光武，有征定四方之功，为大司马，名称于今。太尉体履 `r n("秉性和行为")` 正直，功盖海内，先帝本以前后欲更其位者辄不弥久 `r n("长久")` ，是以迟迟不施行耳。今大将军荐太尉宜为大司马，既合先帝本旨，又放推让 `r n("逊让；推辞")` ，进德尚勋，乃欲明贤良、辩等列、顺长少也。虽旦、奭之属，宗师吕望 `r n("即 周 初人 吕尚 。 尚 年老。隐于渔钓， 文王 出猎，遇于 渭 滨，与语大悦，曰：“吾 太公 望子久矣。”故号之曰 太公望 。后世亦称 吕望 。《楚辞·离骚》：“ 吕望 之鼓刀兮，遭 周文 而得举")` ，念在引领 `r n("期望殷切")` 以处其下，何以过哉！朕甚嘉焉。朕惟先帝固知君子乐天知命，纤芥细疑，不足为忌，当顾柏人 `r fn("《史记·张耳陈馀列传》：“汉 八年，上从 东垣 还，过 赵 ，贯高 等乃壁人 柏人 ，要之置厕。上过欲宿，心动，问曰：‘县名为何？’曰：‘柏人 。’‘柏人者，迫於人也！’不宿而去。”后遂用为皇帝行止戒备的典故。")` 
 彭亡 `r fn("在今四川彭山县东北十里江口镇。《后汉书·岑彭传》：建武十一年(35)，岑彭率大军伐公孙述，进至武阳，“彭所营地名彭亡，闻而恶之，欲徙，会日暮，蜀刺客诈为亡奴降，夜刺杀彭”。即此。")` 
 之文，故用低佪，有意未遂耳。斯亦先帝敬重大臣，恩爱深厚之至也。昔成王建保傅 `r n("太保、太傅或太子太保、太子太傅之合称。")` 之官，近汉显宗以邓禹为太傅，皆所以优崇俊乂 `r n("jùn yì。才德出众的人")` ，必有尊也。其以太尉为太傅。”②《世语》曰：伟字世英，冯翊 `r fn("三国魏改左冯翊置，治所在临晋县(今陕西大荔县)。辖境相当今陕西韩城市、洛川县以南，宜君、蒲城二县以东，渭河以北地区。北魏移治高陆县(今陕西高陵县)。辖境缩小。北周废。隋大业三年(607)复置于冯翊县(今大荔县)。唐武德元年(618)改为同州。天宝元年(742)复改冯翊郡，乾元元年(758)又改为同州。")` 
-人。明帝治宫室，伟谏曰：“今作宫室，斩伐生民墓上松柏，毁坏碑兽石柱，辜及亡人，伤孝子心，不可以为后世之法则。” `r cm("言其忠君爱民")` ③《汉晋春秋》曰：司马宣王谓夏侯玄曰：“《春秋》责大德重，昔武皇帝再入汉中，几至大败，君所知也。今兴平路势至险，蜀已先据。若进不获 `r n("得以,能够")` 战，退见徼 `r n("边界,边境。或通“侥”")` 绝，覆军必矣。将何以任其责！”玄惧，言于爽，引军退。费祎进兵据三岭以截爽，爽争崄苦战，仅乃得过。所发牛马运转者，死失略尽，羌、胡怨叹，而关右悉虚耗矣。
+人。明帝治宫室，伟谏曰：“今作宫室，斩伐生民墓上松柏，毁坏碑兽石柱，辜及亡人，伤孝子心，不可以为后世之法则。” `r fa("言其忠君爱民")` ③《汉晋春秋》曰：司马宣王谓夏侯玄曰：“《春秋》责大德重，昔武皇帝再入汉中，几至大败，君所知也。今兴平路势至险，蜀已先据。若进不获 `r n("得以,能够")` 战，退见徼 `r n("边界,边境。或通“侥”")` 绝，覆军必矣。将何以任其责！”玄惧，言于爽，引军退。费祎进兵据三岭以截爽，爽争崄苦战，仅乃得过。所发牛马运转者，死失略尽，羌、胡怨叹，而关右悉虚耗矣。
+
+#### 初
 
 初，爽以宣王年德并高，恒父事之，不敢专行。及晏等进用，咸共推戴，说爽以权重不宜委之于人。乃以晏、飏、谧为尚书，晏典选举，轨司隶校尉，胜河南尹，诸事希复由宣王。宣王遂称疾避爽。①晏等专政，共分割洛阳、野王典农部桑田数百顷，及坏汤沐地以为产业，承势窃取官物，因缘求欲州郡。有司望风，莫敢忤旨。晏等与廷尉卢毓素有不平，因毓吏微过，深文致毓法，使主者先收毓印绶，然后奏闻。其作威如此。爽饮食车服，拟于乘舆；尚方珍玩，充牣其家；妻妾盈后庭，又私取先帝才人七八人，及将吏、师工、鼓吹、良家子女三十三人，皆以为伎乐。诈作诏书，发才人五十七人送邺台，使先帝倢伃教习为伎。擅取太乐乐器，武库禁兵。作窟室，绮疏四周，数与晏等会其中，纵酒作乐。羲深以为大忧，数谏止之。又著书三篇，陈骄淫盈溢之致祸败，辞旨甚切，不敢斥爽，托戒诸弟以示爽。爽知其为己发也，甚不悦。羲或时以谏喻不纳，涕泣而起。宣王密为之备。九年冬，李胜出为荆州刺史，往诣宣王。宣王称疾困笃，示以羸形。胜不能觉，谓之信然。②
 ①初，宣王以爽魏之肺腑，每推先之，爽以宣王名重，亦引身卑下，当时称焉。丁谧、毕轨等既进用，数言于爽曰：“宣王有大志而甚得民心，不可以推诚委之。”由是爽恒猜防焉。礼貌虽存，而诸所兴造，皆不复由宣王。宣王力不能争，且惧其祸，故避之。②《魏末传》曰：爽等令胜辞宣王，并伺察焉。宣王见胜，胜自陈无他功劳，横蒙（时）〔特〕恩，当为本州，诣阁拜辞，不悟加恩，得蒙引见。宣王令两婢侍边，持衣，衣落，复上指口，言渴求饮，婢进粥，宣王持杯饮粥，粥皆流出沾胸。胜愍然，为之涕泣，谓宣王曰：“今主上尚幼，天下恃赖明公。然众情谓明公方旧风疾发，何意尊体乃尔！”宣王徐更宽言，才令气息相属，说：“年老沉疾，死在旦夕。君当屈并州，并州近胡，好善为之，恐不复相见，如何！”胜曰：“当还忝本州，非并州也。”宣王乃复阳为昏谬，曰：“君方到并州，努力自爱。”错乱其辞，状如荒语。胜复曰：“当忝荆州，非并州也。”宣王乃若微悟者，谓胜曰：“懿年老，意荒忽，不解君言。今还为本州刺史，盛德壮烈，好建功勋。今当与君别，自顾气力转微，后必不更会，因欲自力，设薄主人，生死共别。令师、昭兄弟结君为友，不可相舍去，副懿区区之心。”因流涕哽咽，胜亦长叹，答曰：“辄当承教，须待敕命。”胜辞出，与爽等相见，说：“太傅语言错误，口不摄杯，指南为北。又云吾当作并州，吾答言当还为荆州，非并州也。徐徐与语，有识人时，乃知当还为荆州耳。又欲设主人祖送，不可舍去，宜须待之。”更向爽等垂泪云：“太傅患不可复济，令人怆然。”
@@ -95,7 +97,7 @@ knitr::include_graphics("https://p8.itc.cn/images01/20210516/052adda5c7494e15a24
 
 ## 曹操
 
-### 三国志 - 魏书一 - 武帝纪
+### 三国志·魏书一·武帝纪
 
 太祖武皇帝，沛国谯人也，姓曹，讳操，字孟德，汉相国参 `r n("曹参")` 之后。①桓帝世，曹腾为中常侍、大长秋，封费亭侯。②养子嵩嗣，官至太尉，莫能审其生出本末。③嵩生太祖。
 
