More reading on `曹爽`

--- a/body.Rmd
+++ b/body.Rmd
@@ -72,7 +72,9 @@ knitr::include_graphics("images/city_henan_nanyang.png")
 
 九年春三月，黄门张当私出掖庭 `r n("亦作“掖廷”。宫中旁舍，妃嫔居住的地方")` 才人 `r n("宫中女官的名称，汉代始设置")` 石英等十一人，与曹爽为伎人 `r n("指女歌舞艺人")` `r co("《三国志》言或私取或矫诏赐才人以为伎乐，荒淫无度，犹胜此处，不知真假。[《三国志·曹爽·初》](#三国志-曹爽-初)")` 。爽、晏谓帝疾笃，遂 `r n("于是，就")` 有无君之心，与当密谋，图危社稷，期有日矣。帝亦潜为之备，爽之徒属亦颇疑帝。会河南尹李胜将莅荆州，来候 `r n("迎候拜见")` 帝。帝诈疾笃，使两婢侍，持衣衣落，指口言渴，婢进粥，帝不持杯饮，粥皆流出霑胸。胜曰：“众情 `r n("众人的情绪")` 谓明公旧风发动，何意尊体 `r n("不料、岂料")` 乃尔！”帝使声气才属 `r n("形容声气微弱乏力")` ，说“年老枕疾，死在旦夕。君当屈 `r n("治理，收治")` 并州，并州近胡，善为之备。恐不复相见，以子师、昭兄弟为托。”胜曰：“当还忝 `r n("辱，有愧于，常用作谦辞")` 本州，非并州。”帝乃错乱其辞曰：“君方到并州。”胜复曰：“当忝荆州。”帝曰：“年老意荒，不解君言。今还为本州，盛德壮烈，好建功勋！”胜退告爽曰：“司马公尸居余气，形神已离，不足虑矣。”他日，又言曰：“太傅不可复济，令人怆然。”故爽等不复设备。 
 
-嘉平 `r n("249年四月-254年十月，是三国时期曹魏的君主魏齐王曹芳的第二个年号，共计6年。这也是曹魏政权的第六个年号。")` 元年春正月甲午，天子谒高平陵，爽兄弟皆从。是日，太白袭月。帝于是奏永宁太后，废爽兄弟。时景帝 `r n("司马师")` 为中护军，将兵屯司马门。帝列阵阙下 `r n("宫庭，帝王所居之处")` ，经爽门。爽帐下督严世上楼，引弩将射帝，孙谦止之曰：“事未可知。”三注 `r n("投;击")` 三止，皆引其肘不得发。大司农桓范出赴爽，蒋济言于帝曰：“智囊往矣。”帝曰：“爽与范内疏而智不及，驽马恋栈豆 `r n("劣马贪恋马厩里的豆料。比喻平庸的人目光短浅，贪恋禄位、家室等眼前利益")` ，必不能用也。”于是假司徒高柔节，行大将军事，领爽营，谓柔曰：“君为周勃 `r n("西汉时期开国将领、宰相，名将周亚夫之父")` 矣。”命太仆王观行中领军，摄羲营。帝亲帅太尉蒋济等勒兵 `r n("整治、指挥军队")` 出迎天子，屯于洛水浮桥，上奏曰：“先帝诏陛下、秦王及臣升于御床，握臣臂曰‘深以后事为念’。今大将军爽背弃顾命，败乱国典，内则僣 `r n("古同“僭”。超越本分")` 拟，外专威权。群官耍职，皆置所亲；宿卫 `r n("值宿宫禁，担任警卫")` 旧人，并见斥黜 `r n("弃逐；黜免")` 。根据盘牙 `r n("交相连结")` ，纵恣日甚。又以黄门张当为都监 `r n("三国时称内侍官")` ，专共交关，伺候神器。天下汹汹，人怀危惧。陛下便为寄坐 `r n("谓居客位。比喻地位不稳且无实权")` ，岂得久安？此非先帝诏陛下及臣升御床之本意也。臣虽朽迈，敢忘前言。昔赵高极意 `r n("恣意")` ，秦是以亡；吕霍 `r n("汉高祖后吕雉及汉宣帝后霍成君的并称")` 早断，汉祚永延。此乃陛下之殷鉴，臣授命之秋也。公卿群臣皆以爽有无君之心，兄弟不宜典兵 `r n("统领军队;掌管军事")` 宿卫；奏皇太后，皇太后敕如奏施行。臣辄敕主者及黄门令罢爽、羲，训吏兵各以本官侯就第 `r n("免职回家")` ，若稽留 `r n("停留")` 车驾，以军法从事。臣辄力疾 `r n("动作有力而迅速")` 将兵诣 `r n("前往,去到")` 洛水浮桥，伺察非常。”爽不通奏 `r n("通报，奏告")` ，留车驾宿伊水南，伐树为鹿角 `r n("为阻止敌军前进而设置的树枝、荆棘之类的障碍物")` ，发屯兵数千人以守。桓范果劝爽奉天子幸许昌，移檄 `r n("发布文告晓示")` 征天下兵。爽不能用，而夜遣侍中许允、尚书陈泰诣帝，观望风旨 `r n("意旨，意图")` 。帝数其过失，事止免官。泰还以报爽劝之通奏。帝又遣爽所信殿中校尉尹大目谕爽，指洛水为誓，爽意信之。桓范等援引古今，谏说万端，终不能从。乃曰：“司马公正当欲夺吾权耳。吾得以侯还第 `r n("官吏辞职或解职而返回私宅")` ，不失为富家翁。”范拊膺 `r n("捶胸。表示哀痛或悲愤，常用于安慰人的话语")` 曰：“坐卿。灭吾族矣！”遂通帝奏。既而有司劾黄门张当，并发爽与何晏等反事，乃收爽兄弟及其党与何晏、丁谧、邓扬、毕轨、李胜、桓范等诛之。蒋济曰：“曹真之勋，不可以不祀。”帝不听。初，爽司马鲁芝、主簿杨综斩关 `r n("砍断门闩。泛指攻破城门")` 奔爽。及爽之将归罪也，芝、综泣谏曰：“公居伊周 `r n("商·伊尹和西周·周公旦。两人都曾摄政，后常并称。亦指执掌朝政的大臣")` 之任，挟天子，杖天威，孰敢不从？舍此而欲就东市，岂不痛哉！”有司奏收芝、综科罪，帝赦之，曰：“以劝事君者。”二月，天子以帝为丞相，增封颍川之繁昌、鄢陵、新汲、父城，并前八县，邑二万户，奏事不名。固让丞相。冬十二月，加九锡 `r n("天子优礼大臣，所赐与的车马、衣服、乐器、朱户、纳陛、虎贲、弓矢、?钺、秬鬯等九种物品")` 之礼，朝会不拜。固让九锡。 
+##### 嘉平元年 {#晋书-宣帝-嘉平元年}
+
+嘉平 `r n("249年四月-254年十月，是三国时期曹魏的君主魏齐王曹芳的第二个年号，共计6年。这也是曹魏政权的第六个年号。")` 元年春正月甲午，天子谒高平陵，爽兄弟皆从。是日，太白袭月。帝于是奏永宁太后，废爽兄弟。时景帝 `r n("司马师")` 为中护军，将兵屯司马门。帝列阵阙下 `r n("宫庭，帝王所居之处")` ，经爽门。爽帐下督严世上楼，引弩将射帝，孙谦止之曰：“事未可知。”三注 `r n("投;击")` 三止，皆引其肘不得发。大司农桓范出赴爽，蒋济言于帝曰：“智囊往矣。”帝曰：“爽与范内疏而智不及，驽马恋栈豆 `r n("劣马贪恋马厩里的豆料。比喻平庸的人目光短浅，贪恋禄位、家室等眼前利益")` ，必不能用也。”于是假司徒高柔节，行大将军事，领爽营，谓柔曰：“君为周勃 `r n("西汉时期开国将领、宰相，名将周亚夫之父")` 矣。”命太仆王观行中领军，摄羲营。帝亲帅太尉蒋济等勒兵 `r n("整治、指挥军队")` 出迎天子，屯于洛水浮桥，上奏曰：“先帝诏陛下、秦王及臣升于御床，握臣臂曰‘深以后事为念’。今大将军爽背弃顾命，败乱国典，内则僣 `r n("古同“僭”。超越本分")` 拟，外专威权。群官耍职，皆置所亲；宿卫 `r n("值宿宫禁，担任警卫")` 旧人，并见斥黜 `r n("弃逐；黜免")` 。根据盘牙 `r n("交相连结")` ，纵恣日甚。又以黄门张当为都监 `r n("三国时称内侍官")` ，专共交关，伺候神器。天下汹汹，人怀危惧。陛下便为寄坐 `r n("谓居客位。比喻地位不稳且无实权")` ，岂得久安？此非先帝诏陛下及臣升御床之本意也。臣虽朽迈，敢忘前言。昔赵高极意 `r n("恣意")` ，秦是以亡；吕霍 `r n("汉高祖后吕雉及汉宣帝后霍成君的并称")` 早断，汉祚永延。此乃陛下之殷鉴，臣授命之秋也。公卿群臣皆以爽有无君之心，兄弟不宜典兵 `r n("统领军队;掌管军事")` 宿卫；奏皇太后，皇太后敕如奏施行。臣辄敕主者及黄门令罢爽、羲，训吏兵各以本官侯就第 `r n("免职回家")` ，若稽留 `r n("停留")` 车驾，以军法从事。臣辄力疾 `r n("动作有力而迅速")` 将兵诣 `r n("前往,去到")` 洛水浮桥，伺察非常。”爽不通奏 `r n("通报，奏告")` ，留车驾宿伊水南，伐树为鹿角 `r n("为阻止敌军前进而设置的树枝、荆棘之类的障碍物")` ，发屯兵数千人以守。桓范果劝爽奉天子幸许昌，移檄 `r n("发布文告晓示")` 征天下兵。爽不能用，而夜遣侍中许允、尚书陈泰诣帝 `r co("略许允、陈泰说服爽之经过。[《三国志》](#三国志-曹爽-爽得宣王奏事)")` ，观望风旨 `r n("意旨，意图")` 。帝数其过失，事止免官。泰还以报爽劝之通奏。帝又遣爽所信殿中校尉尹大目谕爽，指洛水为誓，爽意信之。桓范等援引古今，谏说万端，终不能从。乃曰：“司马公正当欲夺吾权耳。吾得以侯还第 `r n("官吏辞职或解职而返回私宅")` ，不失为富家翁。”范拊膺 `r n("捶胸。表示哀痛或悲愤，常用于安慰人的话语")` 曰：“坐卿。灭吾族矣！”遂通帝奏。既而有司劾黄门张当，并发爽与何晏等反事，乃收爽兄弟及其党与何晏、丁谧、邓扬、毕轨、李胜、桓范等诛之。蒋济曰：“曹真之勋，不可以不祀。”帝不听。初，爽司马鲁芝、主簿杨综斩关 `r n("砍断门闩。泛指攻破城门")` 奔爽。及爽之将归罪也，芝、综泣谏曰：“公居伊周 `r n("商·伊尹和西周·周公旦。两人都曾摄政，后常并称。亦指执掌朝政的大臣")` 之任，挟天子，杖天威，孰敢不从？舍此而欲就东市，岂不痛哉！”有司奏收芝、综科罪，帝赦之，曰：“以劝事君者。”二月，天子以帝为丞相，增封颍川之繁昌、鄢陵、新汲、父城，并前八县，邑二万户，奏事不名。固让丞相。冬十二月，加九锡 `r n("天子优礼大臣，所赐与的车马、衣服、乐器、朱户、纳陛、虎贲、弓矢、?钺、秬鬯等九种物品")` 之礼，朝会不拜。固让九锡。 
 
 二年春正月，天子命帝立庙于洛阳，置左右长史，增掾属、舍人满十人，岁举掾属任御史、秀才各一人，增官骑百人，鼓吹十四人，封子肜平乐亭侯，伦安乐亭侯。帝以久疾不任朝请 `r n("汉律﹐诸侯春天朝见皇帝叫朝﹐秋天朝见皇帝叫请。泛称朝见皇帝")` ，每有大事，天子亲幸第以谘访焉。兖州刺史令狐愚、太尉王凌贰于帝，谋立楚王彪。 
 
@@ -110,14 +112,21 @@ knitr::include_graphics("images/map-sanguo.jpeg")
 
 #### 初 {#三国志-曹爽-初}
 
-初，爽以宣王年德并高，恒 `r n("经常,常常")` 父事 `r n("把别人当做父亲一般侍奉")` 之，不敢专行。及晏等进用 `r n("拔擢任用")` ，咸共推戴，说爽以权重不宜委之于人。乃以晏、飏、谧为尚书 `r fn("官名。始置于 战国 时，或称掌书，尚即执掌之义。秦 为少府属官， 汉武帝 提高皇权，因尚书在皇帝左右办事，掌管文书奏章，地位逐渐重要。 汉成帝 时设尚书五人，开始分曹办事。 东汉 时正式成为协助皇帝处理政务的官员，从此三公权力大大削弱。 魏 晋 以后，尚书事务益繁。 隋 代始分六部， 唐 代更确定六部为吏、户、礼、兵、刑、工。从 隋 唐 开始，中央首要机关分为三省，尚书省即其中之一，职权益重。 宋 以后三省分立之制渐成空名，行政全归尚书省。 元 代存中书省之名，而以尚书省各官隶属其中。 明 初犹沿此制，其后废去中书省，径以六部尚书分掌政务，六部尚书遂等于国务大臣， 清 代相沿不改。")` ，晏典 `r n("主持；主管")` 选举，轨 `r n("依循，遵循")` 司隶校尉 `r fn("官名。西汉武帝征和四年(前89)始置，秩二千石。初掌管理使役在中央诸官府服役的徒隶，领一千二百人，持节，亦捕治罪犯。后罢其兵，职掌纠察京都百官及京师附近的三辅(京兆、左冯翊、右扶风)、三河(河东、河内、河南)、弘农七郡的犯法者，职权渐重。属官有从事掾、史，假佐等。元帝初元四年(前45)去节。成帝元延四年(前9)省，哀帝即位后复置，改名司隶，隶大司空，位比司直。东汉仍名司隶校尉，秩比二千石，而威权尤重。凡宫廷内外，皇亲贵戚，京都百官，无所不纠，兼领兵，有检勑、捕杀罪犯之权，并为司隶州行政长官，辖前述七郡。治所在河南洛阳。光武帝特诏朝会时与御史中丞、尚书令并专席而坐，时号“三独坐”。东汉末权臣往往自兼此职以控制京师。所设机构较西汉复杂，属官有都官、功曹、别驾、簿曹、兵曹、部郡国等从事史十二员，假佐二十五员。三国魏沿置，先治弘农，后治河南，辖司州所属河南、河东、河内、弘农、平阳五郡，三品。属官有从事史、假佐一百员，增设诸曹、武猛、督军从事等。蜀亦置，掌督察京师，但不典益州事，常以重臣兼领。西晋沿魏制，三品。东晋罢，其职归扬州刺史。十六国多置。北魏初曾置，旋罢，其职归司州牧、司州刺史。")` ，胜 `r n("通“升”")` 河南尹，诸事希 `r n("假借为“稀”。稀少;罕见")` 复由宣王。宣王遂称疾避爽。①晏等专政，共分割洛阳、野王典农部桑田数百顷，及坏汤沐地 `r n("周制，诸侯朝见天子时，天子在王畿之内赐其封邑，以供其膳宿和斋戒沐浴之用，故称汤沐邑。汉朝皇帝、皇后、公主以及诸侯王、列侯收取赋税以供其私人奉养的封邑，亦称汤沐邑。《汉书 ·高帝纪》颜师古注： “凡言汤沐邑者，谓以其赋税供汤沐之具也。”")` 以为产业，承势窃取官物，因缘求欲州郡。有司 `r n("官吏和官署泛称。古代设官分职，各有专司，故称。《牧簋铭》：“命汝辟百寮、有司事。”《汉书·文帝纪》：“有司请令县道，人八十已上，赐米人月一石、肉二十斤、酒五斗。”《晋书·石崇传》：“有司承旨奏(石)统，将加重罚。”")` 望风，莫敢忤旨。晏等与廷尉 `r fn("官名。亦称廷尉卿。战国秦始置，秦、西汉沿置。景帝中六年 (前144)改名大理，武帝建元四年(前137)复旧。秩中二千石，列位九卿，为中央最高司法审判机构长官，遵照皇帝旨意修订法律，汇总全国断狱数，主管诏狱。文武大臣有罪，由其直接审理收狱，重大案件由皇帝派人会审。又为地方司法案件的上诉机关，负责复核审决郡国疑狱，或上报皇帝，有时也派员至郡国协助审理重要案件。属官有正，左、右监，宣帝时增置左、右平。哀帝元寿二年 (前1) 改名大理。新莽改名作士。东汉复名廷尉，省右平、右监。当时御史中丞、司隶校尉也有治狱奏谳之责，重大案件或由三方会审。魏、晋、南朝沿置，属官有丞、正、监、平、律博士各一员。当时修订法律及刑狱之政令仰承尚书省，南朝又置“建康三官”分掌刑狱，廷尉职权较汉为轻。魏、晋、宋三品。梁、陈定名“廷尉卿”。北魏或称廷尉卿，又增设少卿为之副贰，其余属官略同，孝庄帝永安二年 (529)又置司直十人，覆审御史检劾案件。孝文帝太和十七年(493) 定为二品上，二十三年改三品。北齐初沿置，后改置“大理卿”")` 卢毓 `r n("yù")` 素有不平，因毓吏微过，深文 `r n("谓制定或援用法律条文苛细严峻")` 致毓法 `r n("依法处治")` ，使主者先收毓印绶，然后奏闻。其作威如此。爽饮食车服，拟于乘舆 `r n("shèng yú。古代特指天子和诸侯所乘坐的车子，泛指皇帝用的器物")` ；尚方珍玩，充牣 `r n("chōng rèn。充满")` 其家；妻妾盈后庭，又私取先帝才人七八人，及将吏 `r n("文武官员的合称")` 、师工 `r n("《国语·楚语上》：“临事有瞽史之导，宴居有师工之诵。” 韦昭 注：“师，乐师也；工，瞽矇也。诵，谓箴諫时世也。”")` 、鼓吹 `r n("演奏乐曲的乐队")` 、良家子女三十三人，皆以为伎乐。诈作诏书，发才人五十七人送邺台，使先帝倢伃教习为伎。擅取太乐乐器，武库禁兵。作窟室，绮疏四周，数与晏等会其中，纵酒作乐。羲深以为大忧，数谏止之。又著书三篇，陈骄淫盈溢之致祸败，辞旨甚切，不敢斥爽，托戒诸弟以示爽。爽知其为己发也，甚不悦。羲或时以谏喻不纳，涕泣而起。宣王密为之备。九年冬，李胜出为荆州刺史，往诣宣王。宣王称疾困笃，示以羸形。胜不能觉，谓之信然。②
+初，爽以宣王年德并高，恒 `r n("经常,常常")` 父事 `r n("把别人当做父亲一般侍奉")` 之，不敢专行。及晏等进用 `r n("拔擢任用")` ，咸共推戴，说爽以权重不宜委之于人。乃以晏、飏、谧为尚书 `r fn("官名。始置于 战国 时，或称掌书，尚即执掌之义。秦 为少府属官， 汉武帝 提高皇权，因尚书在皇帝左右办事，掌管文书奏章，地位逐渐重要。 汉成帝 时设尚书五人，开始分曹办事。 东汉 时正式成为协助皇帝处理政务的官员，从此三公权力大大削弱。 魏 晋 以后，尚书事务益繁。 隋 代始分六部， 唐 代更确定六部为吏、户、礼、兵、刑、工。从 隋 唐 开始，中央首要机关分为三省，尚书省即其中之一，职权益重。 宋 以后三省分立之制渐成空名，行政全归尚书省。 元 代存中书省之名，而以尚书省各官隶属其中。 明 初犹沿此制，其后废去中书省，径以六部尚书分掌政务，六部尚书遂等于国务大臣， 清 代相沿不改。")` ，晏典 `r n("主持；主管")` 选举，轨 `r n("依循，遵循")` 司隶校尉 `r fn("官名。西汉武帝征和四年(前89)始置，秩二千石。初掌管理使役在中央诸官府服役的徒隶，领一千二百人，持节，亦捕治罪犯。后罢其兵，职掌纠察京都百官及京师附近的三辅(京兆、左冯翊、右扶风)、三河(河东、河内、河南)、弘农七郡的犯法者，职权渐重。属官有从事掾、史，假佐等。元帝初元四年(前45)去节。成帝元延四年(前9)省，哀帝即位后复置，改名司隶，隶大司空，位比司直。东汉仍名司隶校尉，秩比二千石，而威权尤重。凡宫廷内外，皇亲贵戚，京都百官，无所不纠，兼领兵，有检勑、捕杀罪犯之权，并为司隶州行政长官，辖前述七郡。治所在河南洛阳。光武帝特诏朝会时与御史中丞、尚书令并专席而坐，时号“三独坐”。东汉末权臣往往自兼此职以控制京师。所设机构较西汉复杂，属官有都官、功曹、别驾、簿曹、兵曹、部郡国等从事史十二员，假佐二十五员。三国魏沿置，先治弘农，后治河南，辖司州所属河南、河东、河内、弘农、平阳五郡，三品。属官有从事史、假佐一百员，增设诸曹、武猛、督军从事等。蜀亦置，掌督察京师，但不典益州事，常以重臣兼领。西晋沿魏制，三品。东晋罢，其职归扬州刺史。十六国多置。北魏初曾置，旋罢，其职归司州牧、司州刺史。")` ，胜 `r n("通“升”")` 河南尹，诸事希 `r n("假借为“稀”。稀少;罕见")` 复由宣王。宣王遂称疾避爽。①晏等专政，共分割洛阳、野王典农部桑田数百顷，及坏汤沐地 `r n("周制，诸侯朝见天子时，天子在王畿之内赐其封邑，以供其膳宿和斋戒沐浴之用，故称汤沐邑。汉朝皇帝、皇后、公主以及诸侯王、列侯收取赋税以供其私人奉养的封邑，亦称汤沐邑。《汉书 ·高帝纪》颜师古注： “凡言汤沐邑者，谓以其赋税供汤沐之具也。”")` 以为产业，承势窃取官物，因缘求欲州郡。有司 `r n("官吏和官署泛称。古代设官分职，各有专司，故称。《牧簋铭》：“命汝辟百寮、有司事。”《汉书·文帝纪》：“有司请令县道，人八十已上，赐米人月一石、肉二十斤、酒五斗。”《晋书·石崇传》：“有司承旨奏(石)统，将加重罚。”")` 望风，莫敢忤旨。晏等与廷尉 `r fn("官名。亦称廷尉卿。战国秦始置，秦、西汉沿置。景帝中六年 (前144)改名大理，武帝建元四年(前137)复旧。秩中二千石，列位九卿，为中央最高司法审判机构长官，遵照皇帝旨意修订法律，汇总全国断狱数，主管诏狱。文武大臣有罪，由其直接审理收狱，重大案件由皇帝派人会审。又为地方司法案件的上诉机关，负责复核审决郡国疑狱，或上报皇帝，有时也派员至郡国协助审理重要案件。属官有正，左、右监，宣帝时增置左、右平。哀帝元寿二年 (前1) 改名大理。新莽改名作士。东汉复名廷尉，省右平、右监。当时御史中丞、司隶校尉也有治狱奏谳之责，重大案件或由三方会审。魏、晋、南朝沿置，属官有丞、正、监、平、律博士各一员。当时修订法律及刑狱之政令仰承尚书省，南朝又置“建康三官”分掌刑狱，廷尉职权较汉为轻。魏、晋、宋三品。梁、陈定名“廷尉卿”。北魏或称廷尉卿，又增设少卿为之副贰，其余属官略同，孝庄帝永安二年 (529)又置司直十人，覆审御史检劾案件。孝文帝太和十七年(493) 定为二品上，二十三年改三品。北齐初沿置，后改置“大理卿”")` 卢毓 `r n("yù")` 素有不平，因毓吏微过，深文 `r n("谓制定或援用法律条文苛细严峻")` 致毓法 `r n("依法处治")` ，使主者先收毓印绶，然后奏闻。其作威如此。爽饮食车服，拟于乘舆 `r n("shèng yú。古代特指天子和诸侯所乘坐的车子，泛指皇帝用的器物")` ；尚方珍玩，充牣 `r n("chōng rèn。充满")` 其家；妻妾盈后庭，又私取先帝才人七八人，及将吏 `r n("文武官员的合称")` 、师工 `r n("《国语·楚语上》：“临事有瞽史之导，宴居有师工之诵。” 韦昭 注：“师，乐师也；工，瞽矇也。诵，谓箴諫时世也。”")` 、鼓吹 `r n("演奏乐曲的乐队")` 、良家子女三十三人，皆以为伎乐。诈作诏书，发才人五十七人送邺台 `r n("曹操为魏王，在邺起冰井﹑铜雀﹑金虎三台。其中铜雀台最有名。")` `r fn("建安五年，曹操击败袁绍，于邺建都漳河畔大兴土木修建铜雀台，高十丈，分三台，各相距六十步远，中间各架飞桥相连。建安十八年（213年），曹操又在铜雀台南方建一金虎台。次年（214年），又在铜雀台北建一冰井台，合称为“三台”。《水经注·卷五·浊漳水》记载：“在邺城的西北隅，以墙为基，台高十丈，有屋百余间……巍然崇举，其高若山”。")` ，使先帝倢伃 `r n("倢伃，汉武帝置，为妃嫔之首。元帝时因增设昭仪，退居第二。曹魏时退居十二等中的第九。晋时尚在九嫔之内。南朝宋以下，降至九嫔以下，至清废。")` `r fn("倢伃，其名之意，据《汉书·外戚传》颜师古注，“倢，言接幸于上也。伃，美称也。”")` 教习为伎。擅取太乐乐器，武库禁兵。作窟室 `r n("春秋 郑 伯有 为窟室，彻夜饮酒欢娱，后借指畅饮欢娱之所")` ，绮疏 `r n("亦作“綺疎 ”。指雕刻成空心花纹的窗户")` 四周，数与晏等会其中，纵酒作乐。羲深以为大忧，数谏止之。又著书三篇，陈骄淫盈溢之致祸败，辞旨甚切，不敢斥爽，托戒诸弟以示爽。爽知其为己发也，甚不悦。羲或时 `r n("有时")` 以谏喻不纳，涕泣而起。宣王密为之备。九年冬，李胜出为荆州刺史，往诣宣王。宣王称疾困笃，示以羸形 `r n("形体瘦弱；瘦弱的形体")` 。胜不能觉，谓之信然。②
 
-①初，宣王以爽魏之肺腑，每推先之，爽以宣王名重，亦引身卑下，当时称焉。丁谧、毕轨等既进用，数言于爽曰：“宣王有大志而甚得民心，不可以推诚委之。”由是爽恒猜防焉。礼貌虽存，而诸所兴造，皆不复由宣王。宣王力不能争，且惧其祸，故避之。②《魏末传》曰：爽等令胜辞宣王，并伺察焉。宣王见胜，胜自陈无他功劳，横蒙（时）〔特〕恩，当为本州，诣阁拜辞，不悟加恩，得蒙引见。宣王令两婢侍边，持衣，衣落，复上指口，言渴求饮，婢进粥，宣王持杯饮粥，粥皆流出沾胸。胜愍然，为之涕泣，谓宣王曰：“今主上尚幼，天下恃赖明公。然众情谓明公方旧风疾发，何意尊体乃尔！”宣王徐更宽言，才令气息相属，说：“年老沉疾，死在旦夕。君当屈并州，并州近胡，好善为之，恐不复相见，如何！”胜曰：“当还忝本州，非并州也。”宣王乃复阳为昏谬，曰：“君方到并州，努力自爱。”错乱其辞，状如荒语。胜复曰：“当忝荆州，非并州也。”宣王乃若微悟者，谓胜曰：“懿年老，意荒忽，不解君言。今还为本州刺史，盛德壮烈，好建功勋。今当与君别，自顾气力转微，后必不更会，因欲自力，设薄主人，生死共别。令师、昭兄弟结君为友，不可相舍去，副懿区区之心。”因流涕哽咽，胜亦长叹，答曰：“辄当承教，须待敕命。”胜辞出，与爽等相见，说：“太傅语言错误，口不摄杯，指南为北。又云吾当作并州，吾答言当还为荆州，非并州也。徐徐与语，有识人时，乃知当还为荆州耳。又欲设主人祖送，不可舍去，宜须待之。”更向爽等垂泪云：“太傅患不可复济，令人怆然。”
+①初，宣王以爽魏之肺腑，每推先之，爽以宣王名重，亦引身卑下，当时称焉。丁谧、毕轨等既进用，数言于爽曰：“宣王有大志而甚得民心，不可以推诚委之。”由是爽恒猜防焉。礼貌虽存，而诸所兴造，皆不复由宣王。宣王力不能争，且惧其祸，故避之。②《魏末传》曰：爽等令胜辞 `r n("辞别;告别")` 宣王，并伺察焉。宣王见胜，胜自陈无他功劳，横蒙 `r n("意外蒙受；过分蒙受")` （时）〔特〕恩，当为本州 `r n("指家乡所在的州")` ，诣 `r n("qi前往")` 阁拜辞，不悟 `r n("了解；领会")` 加恩，得蒙引见。宣王令两婢侍边，持衣，衣落，复上指口，言渴求饮，婢进粥，宣王持杯饮粥，粥皆流出沾胸。胜愍然 `r n("mǐn rán。怜悯貌")` ，为之涕泣，谓宣王曰：“今主上尚幼，天下恃赖明公。然众情谓明公方旧风疾发，何意尊体乃尔！”宣王徐更宽言，才令气息相属 `r n("xiāng zhǔ。相接连；相继")` ，说：“年老沉疾，死在旦夕。君当屈并州，并州近胡，好善为之，恐不复相见，如何！”胜曰：“当还忝 `r n("tiǎn。表示愧于进行某事。用作谦词")` 本州，非并州也。”宣王乃复阳 `r n("假装")` 为昏谬，曰：“君方到并州，努力自爱。”错乱其辞，状如荒语。胜复曰：“当忝荆州，非并州也。”宣王乃若微悟者，谓胜曰：“懿年老，意荒忽，不解君言。今还为本州刺史，盛德壮烈，好建功勋。今当与君别，自顾气力转微，后必不更会，因欲自力，设薄 `r n("薄设 [báo shè]，设小酌、便宴")` 主人，生死共别。令师、昭兄弟结君为友，不可相舍去，副 `r n("交付,付与")` 懿区区之心。”因流涕哽咽，胜亦长叹，答曰：“辄当承教，须待 `r n("等待")` 敕命。”胜辞出，与爽等相见，说：“太傅语言错误，口不摄杯，指南为北。又云吾当作并州，吾答言当还为荆州，非并州也。徐徐与语，有识人时，乃知当还为荆州耳。又欲设主人祖送 `r n("犹饯行。祖饯送行")` ，不可舍去 `r n("喻离开住所到别处")` ，宜须待之。”更向爽等垂泪云：“太傅患不可复济，令人怆然。”
 
-十年正月，车驾朝高平陵，爽兄弟皆从。①宣王部勒兵马，先据武库，遂出屯洛水浮桥。奏爽曰：“臣昔从辽东还，先帝诏陛下、秦王及臣升御床，把臣臂，深以后事为念。臣言‘二祖亦属臣以后事，（为念）此自陛下所见，无所忧苦。万一有不如意，臣当以死奉明诏’。黄门令董箕等，才人侍疾者，皆所闻知。今大将军爽背弃顾命，败乱国典，内则僭拟，外专威权；破坏诸营，尽据禁兵，群官要职，皆置所亲；殿中宿卫，历世旧人皆复斥出，欲置新人以树私计；根据槃牙，纵恣日甚。外既如此，又以黄门张当为都监，专共交关，看察至尊，候伺神器，离间二宫，伤害骨肉。天下汹汹，人怀危惧，陛下但为寄坐，岂得久安！此非先帝诏陛下及臣升御床之本意也。臣虽朽迈，敢忘往言？昔赵高极意，秦氏以灭；吕、霍早断，汉祚永世。此乃陛下之大鉴，臣受命之时也。太尉臣济、尚书令臣孚等，皆以爽为有无君之心，兄弟不宜典兵宿卫，奏永宁宫。皇太后令敕臣如奏施行。臣辄敕主者及黄门令罢爽、羲、训吏兵，以侯就第，不得逗留以稽车驾，敢有稽留，便以军法从事。臣辄力疾将兵屯洛水浮桥，伺察非常。”②
-①《世语》曰：爽兄弟先是数俱出游，桓范谓曰：“总万机，典禁兵，不宜并出，若有闭城门，谁复内入者？”爽曰：“谁敢尔邪！”由此不复并行。至是乃尽出也。②《世语》曰：初，宣王勒兵从阙下趣武库，当爽门，人逼车住。爽妻刘怖，出至厅事，谓帐下守督曰：“公在外，今兵起，如何？”督曰：“夫人勿忧。”乃上门楼，引弩注箭欲发。将孙谦在后牵止之曰：“天下事未可知！”如此者三，宣王遂得过去。
+#### 正始十年（249年） `r fn("亦嘉平元年")`
+
+十年正月，车驾朝高平陵，爽兄弟皆从。①宣王部勒 `r n("统率")` 兵马，先据武库 `r n("储藏兵器的仓库")` ，遂出屯洛水浮桥。奏爽曰：“臣昔从辽东还，先帝诏陛下、秦王及臣升御床，把臣臂，深以后事为念。臣言‘二祖 `r n("曹操，曹丕")` 亦属臣以后事，（为念）此自陛下所见，无所 `r n("表示否定不必明言或不可明言的人或事物")` 忧苦。万一有不如意，臣当以死奉明诏’。黄门令董箕等，才人侍疾者，皆所闻知。今大将军爽背弃顾命，败乱国典，内则僭拟，外专威权；破坏诸营，尽据禁兵，群官要职，皆置所亲；殿中宿卫，历世旧人皆复斥出，欲置新人以树私计；根据槃牙，纵恣日甚。外既如此，又以黄门张当为都监，专共交关，看察至尊，候伺神器，离间二宫，伤害骨肉。天下汹汹，人怀危惧，陛下但为寄坐，岂得久安！此非先帝诏陛下及臣升御床之本意也。臣虽朽迈，敢忘往言？昔赵高极意，秦氏以灭；吕、霍早断，汉祚永世。此乃陛下之大鉴，臣受命之时也。太尉臣济、尚书令臣孚等，皆以爽为有无君之心，兄弟不宜典兵宿卫，奏永宁宫。皇太后令敕臣如奏施行。臣辄敕主者及黄门令罢爽、羲、训吏兵，以侯就第，不得逗留以稽车驾，敢有稽留，便以军法从事。臣辄力疾将兵屯洛水浮桥，伺察非常。”② `r co("此奏并松之注可与 [《晋书·宣帝·嘉平元年》](#晋书-宣帝-嘉平元年) 比对揣摩")` 
+
+①《世语》曰：爽兄弟 `r n("爽、羲")` 先是数俱出游，桓范谓曰：“总万机，典禁兵，不宜并出，若有闭城门，谁复内入者？”爽曰：“谁敢尔邪！”由此不复并行。至是乃尽出也。 `r co("谓之不自制，或恒范言微")` ②《世语》曰：初，宣王勒兵从阙下趣 `r n("通“趋”。趋向;奔向")` 武库，当 `r n("面对着")` 爽门，人逼车住 `r n("停止")` 。爽妻刘怖，出至厅事，谓帐下守督 `r n("严世")` 曰：“公在外，今兵起，如何？”督曰：“夫人勿忧。”乃上门楼，引弩注箭欲发。将孙谦在后牵止之曰：“天下事未可知！”如此者三，宣王遂得过去。
+
+##### 爽得宣王奏事 {#三国志-曹爽-爽得宣王奏事}
+
 爽得宣王奏事，不通，迫窘不知所为。①大司农沛国桓范闻兵起，不应太后召，矫诏开平昌门，拔取剑戟，略将门候，南奔爽。宣王知，曰：“范画策，爽必不能用范计。”范说爽使车驾幸许昌，招外兵。爽兄弟犹豫未决，范重谓羲曰：“当今日，卿门户求贫贱复可得乎？且匹夫持质一人，尚欲望活，今卿与天子相随，令于天下，谁敢不应者？”羲犹不能纳。侍中许允、尚书陈泰说爽，使早自归罪。爽于是遣允、泰诣宣王，归罪请死，乃通宣王奏事。②遂免爽兄弟，以侯还第。③
-①干宝《晋纪》曰：爽留车驾宿伊水南，伐木为鹿角，发屯甲兵数千人以为卫。《魏末传》曰：宣王语弟孚，陛下在外不可露宿，促送帐幔、太官食具诣行在所。②干宝《晋书》曰：桓范出赴爽，宣王谓蒋济曰：“智囊往矣。”济曰：“范则智矣，驽马恋栈豆，爽必不能用也。”《世语》曰：宣王使许允、陈泰解语爽，蒋济亦与书达宣王之旨，又使爽所信殿中校尉尹大目谓爽，唯免官而已，以洛水为誓。爽信之，罢兵。《魏氏春秋》曰：爽既罢兵，曰：“我不失作富家翁。”范哭曰：“曹子丹佳人，生汝兄弟，犊耳！何图今日坐汝等族灭矣！”③《魏末传》曰：爽兄弟归家。敕洛阳县发民八百人，使尉部围爽第四角，角作高楼，令人在上望视爽兄弟举动。爽计穷愁闷，持弹到后园中，楼上人便唱言“故大将军东南行！”爽还厅事上，与兄弟共议，未知宣王意深浅，作书与宣王曰：“贱子爽哀惶恐怖，无状招祸，分受屠灭。前遣家人迎粮，于今未反，数日乏匮，当烦见饷，以继旦夕。”宣王得书大惊，即答书曰：“初不知乏粮，甚怀踧踖。令致米一百斛，并肉脯、盐豉、大豆。”寻送。爽兄弟不达变数，即便喜欢，自谓不死。
+
+①干宝《晋纪》曰：爽留车驾宿伊水 `r n("洛水支流。源出河南栾川县伏牛山北麓，东北流至偃师县南入洛水。")` 南，伐木为鹿角，发 `r n("派遣")` 屯甲兵数千人以为卫。《魏末传》曰：宣王语弟孚，陛下在外不可露宿，促送帐幔、太官食具诣行在所。②干宝《晋书》曰：桓范出赴爽，宣王谓蒋济曰：“智囊往矣。”济曰：“范则智矣，驽马恋栈豆，爽必不能用也。”《世语》曰：宣王使许允、陈泰解语爽，蒋济亦与书达宣王之旨，又使爽所信殿中校尉尹大目谓爽，唯免官而已，以洛水为誓。爽信之，罢兵。《魏氏春秋》曰：爽既罢兵，曰：“我不失作富家翁。”范哭曰：“曹子丹佳人，生汝兄弟，犊耳！何图今日坐汝等族灭矣！”③《魏末传》曰：爽兄弟归家。敕洛阳县发民八百人，使尉部围爽第四角，角作高楼，令人在上望视爽兄弟举动。爽计穷愁闷，持弹到后园中，楼上人便唱言“故大将军东南行！”爽还厅事上，与兄弟共议，未知宣王意深浅，作书与宣王曰：“贱子爽哀惶恐怖，无状招祸，分受屠灭。前遣家人迎粮，于今未反，数日乏匮，当烦见饷，以继旦夕。”宣王得书大惊，即答书曰：“初不知乏粮，甚怀踧踖。令致米一百斛，并肉脯、盐豉、大豆。”寻送。爽兄弟不达变数，即便喜欢，自谓不死。
 初，张当私以所择才人张、何等与爽，疑其有奸，收当治罪。当陈爽与晏等阴谋反逆，并先习兵，须三月中欲发，于是收晏等下狱。会公卿朝臣廷议，以为“《春秋》之义，‘君亲无将，将而必诛’。爽以支属，世蒙殊宠，亲受先帝握手遗诏，托以天下，而包藏祸心，蔑弃顾命，乃与晏、飏及当等谋图神器，范党同罪人，皆为大逆不道”。于是收爽、羲、训、晏、飏、谧、轨、胜、范、当等，皆伏诛，夷三族。①嘉平中，绍功臣世，封真族孙熙为新昌亭侯，邑三百户，以奉真后。②
 
 ①《魏略》曰：邓飏字玄茂，邓禹后也。少得士名于京师。明帝时为尚书郎，除洛阳令，坐事免，拜中郎，又入兼中书郎。初，飏与李胜等为浮华友，及在中书，浮华事发，被斥出，遂不复用。正始初，乃出为颍川太守，转大将军长史，迁侍中尚书。飏为人好货，前在内职，许臧艾授以显官，艾以父妾与飏，故京师为之语曰：“以官易妇邓玄茂。”每所荐达，多如此比。故何晏选举不得人，颇由飏之不公忠，遂同其罪，盖由交友非（奇）〔其〕才。（魏略曰）丁谧字彦靖。父斐字文侯。初，斐随太祖，太祖以斐乡里，特饶爱之。斐性好货，数请求犯法，辄得原宥。为典军校尉，总摄内外，每所陈说，多见从之。建安末，从太祖征吴。斐随行，自以家牛羸困，乃私易官牛，为人所白，被收送狱，夺官。其后太祖问斐曰：“文侯，印绶所在？”斐亦知见戏，对曰：“以易饼耳。”太祖笑，顾谓左右曰：“东曹毛掾数白此家，欲令我重治，我非不知此人不清，良有以也。我之有斐，譬如人家有盗狗而善捕鼠，盗虽有小损，而完我囊贮。”遂复斐官，听用如初。后数岁，病亡。谧少不肯交游，但博观书传。为人沉毅，颇有才略。太和中，常住邺，借人空屋，居其中。而诸王亦欲借之，不知谧已得，直开门入。谧望见王，交脚卧而不起，而呼其奴客曰：“此何等人？促呵使去。”王怒其无礼，还具上言。明帝收谧，系邺狱，以其功臣子，原出。后帝闻其有父风，召拜度支郎中。曹爽宿与相亲，时爽为武卫将军，数为帝说其可大用。会帝崩，爽辅政，乃拔谧为散骑常侍，遂转尚书。谧为人外似疏略，而内多忌。其在台阁，数有所弹驳，台中患之，事不得行。又其意轻贵，多所忽略，虽与何晏、邓飏等同位，而皆少之，唯以势屈于爽。爽亦敬之，言无不从。故于时谤书，谓“台中有三狗，二狗崖柴不可当，一狗凭默作疽囊”。三狗，谓何、邓、丁也。默者，爽小字也。其意言三狗皆欲啮人，而谧尤甚也。奏使郭太后出居别宫，及遣乐安王使北诣邺，又遣文钦令还淮南，皆谧之计。司马宣王由是特深恨之。毕轨字昭先。父字子礼，建安中为典农校尉。轨以才能，少有名声。明帝在东宫时，轨在文学中。黄初末，出为长史。明帝即位，入为黄门郎，子尚公主，居处殷富。迁并州刺史。其在并州，名为骄豪。时杂虏数为暴，害吏民，轨辄出军击鲜卑轲比能，失利。中护军蒋济表曰：“毕轨前失，既往不咎，但恐是后难可以再。凡人材有长短，不可强成。轨文雅智意，自为美器。今失并州，换置他州，若入居显职，不毁其德，于国事实善。此安危之要，唯圣恩察之。”至正始中，入为中护军，转侍中尚书，迁司隶校尉。素与曹爽善，每言于爽，多见从之。李胜字公昭。父休字子朗，有智略。张鲁前为镇北将军，休为司马，家南郑。时汉中有甘露降，子朗见张鲁精兵数万人，有四塞之固，遂建言赤气久衰，黄家当兴，欲鲁举号，鲁不听。会鲁破，太祖以其劝鲁内附，赐爵关内侯，署散官骑从，诣邺。至黄初中，仕历上党、巨鹿二郡太守，后以年老还，拜议郎。胜少游京师，雅有才智，与曹爽善。明帝禁浮华，而人白胜堂有四窗八达，各有主名。用是被收，以其所连引者多，故得原，禁锢数岁。帝崩，曹爽辅政，胜为洛阳令。夏侯玄为征西将军，以胜为长史。玄亦宿与胜厚。骆谷之役，议从胜出，由是司马宣王不悦于胜。累迁荥阳太守、河南尹。胜前后所宰守，未尝不称职，为尹岁余，厅事前屠苏坏，令人更治之，小材一枚激堕，正挝受符吏石虎头，断之。后旬日，迁为荆州刺史，未及之官而败也。桓范字元则，世为冠族。建安末，入丞相府。延康中，为羽林左监。以有文学，与王象等典集《皇览》。明帝时为中领军尚书，迁征虏将军、东中郎将，使持节都督青、徐诸军事，治下邳。与徐州刺史（邹）〔郑〕岐争屋，引节欲斩岐，为岐所奏，不直，坐免还。复为兖州刺史，怏怏不得意。又闻当转为冀州牧。是时冀州统属镇北，而镇北将军吕昭才实仕进，本在范后。范谓其妻仲长曰：“我宁作诸卿，向三公长跪耳，不能为吕子展屈也。”其妻曰：“君前在东，坐欲擅斩徐州刺史，众人谓君难为作下，今复羞为吕屈，是复难为作上也。”范忿其言触实，乃以刀环撞其腹。妻时怀孕，遂堕胎死。范亦竟称疾，不赴冀州。正始中拜大司农。范前在台阁，号为晓事，及为司农，又以清省称。范尝抄撮《汉书》中诸杂事，自以意斟酌之，名曰《世要论》。蒋济为太尉，尝与范会社下，群卿列坐有数人，范怀其所撰，欲以示济，谓济当虚心观之。范出其书以示左右，左右传之示济，济不肯视，范心恨之。因论他事，乃发怒谓济曰：“我祖薄德，公辈何似邪？”济性虽强毅，亦知范（壳）〔刚〕毅，睨而不应，各罢。范于沛郡，仕次在曹真后。于时曹爽辅政，以范乡里老宿，于九卿中特敬之，然不甚亲也。及宣王起兵，闭城门，以范为晓事，乃指召之，欲使领中领军。范欲应召，而其子谏之，以为车驾在外，不如南出。范疑有顷，儿又促之。范欲去而司农丞吏皆止范。范不从，乃突出至平昌城门，城门已闭。门候司蕃，故范举吏也，范呼之，举手中版以示之，矫曰：“有诏召我，卿促开门！”蕃欲求见诏书，范呵之，言“卿非我故吏邪，何以敢尔？”乃开之。范出城，顾谓蕃曰：“太傅图逆，卿从我去。”蕃徒行不能及，遂避侧。范南见爽，劝爽兄弟以天子诣许昌，征四方以自辅。爽疑，羲又无言。范自谓羲曰：“事昭然，卿用读书何为邪？于今日卿等门户倒矣！”俱不言。范又谓羲曰：“卿别营近在阙南，洛阳典农治在城外，呼召如意。今诣许昌，不过中宿，许昌别库，足相被假，所忧当在谷食，而大司农印章在我身。”羲兄弟默然不从，（甲）〔中〕夜至五鼓，爽乃投刀于地，谓诸从驾群臣曰：“我度太傅意，亦不过欲令我兄弟向己也。我独有以不合于远近耳！”遂进谓帝曰：“陛下作诏免臣官，报皇太后令。”范知爽首免而己必坐唱义也。上乃曰：“老子今兹坐卿兄弟族矣！”爽等既免，帝还宫，遂令范随从。到洛水浮桥北，望见宣王，下车叩头而无言。宣王呼范姓曰：“桓大夫何为尔邪？”车驾入宫，有诏范还复位。范诣阙拜章谢，待报。会司蕃诣鸿胪自首，具说范前临出所道。宣王乃忿然曰：“诬人以反，于法何应？”主者曰：“科律，反受其罪。”乃收范于阙下。时人持范甚急，范谓部官曰：“徐之，我亦义士耳。”遂送廷尉。《世语》曰：初，爽梦二虎衔雷公，雷公若二升碗，放着庭中。爽恶之，以问占者，灵台丞马训曰：“忧兵。”训退，告其妻曰：“爽将以兵亡，不出旬日。”《汉晋春秋》曰：安定皇甫谧以九年冬梦至洛阳，自庙出，见车骑甚众，以物呈庙云：“诛大将军曹爽。”寤而以告其邑人，邑人曰：“君欲作曹人之梦乎？朝无公孙彊如何？且爽兄弟典重兵，又权尚书事，谁敢谋之？”谧曰：“爽无叔振铎之请，苟失天机则离矣，何恃于彊？昔汉之阎显，倚母后之尊，权国威命，可谓至重矣，阉人十九人一旦尸之，况爽兄弟乎？”《世语》曰：初，爽出，司马鲁芝留在府，闻有事，将营骑斫津门出赴爽。爽诛，擢为御史中丞。及爽解印绶，将出，主簿杨综止之曰：“公挟主握权，舍此以至东市乎？”爽不从。有司奏综导爽反，宣王曰：“各为其主也。”宥之，以为尚书郎。芝字世英，扶风人也。以后仕进至特进光禄大夫。综字初伯，后为安东将军司马文王长史。臣松之案：夏侯湛为芝铭及干宝《晋纪》并云爽既诛，宣王即擢芝为并州刺史，以综为安东参军。与《世语》不同。②干宝《晋纪》曰：蒋济以曹真之勋力，不宜绝祀，故以熙为后。济又病其言之失信于爽，发病卒。
